# post

./: .gitignore  Cargo.toml  README.md  sample_input.txt
.github/workflows/: deploy-pages.yml  pages.yml  release.yml  test.yml
docs/: user_manual.md
docs/manual/: glossary.tex  main.tex  project.tex  references.bib
docs/user-manual/: .latexmkrc  main.tex  project.tex
sim/: Cargo.toml
sim/src/: config.rs  example_data.rs  lib.rs  phase.rs  planet.rs  state.rs  steering.rs  transformations.rs  utils.rs  vehicle.rs
sim/src/atmosphere/: mod.rs  standard_atmosphere_1962.rs
sim/src/integration/: mod.rs  runge_kutta.rs
sim/src/planet/: mod.rs
sim/src/planet/atmosphere/: mod.rs  standard_atmosphere_1962.rs
sim/src/utils/: constants.rs  input.json  macros.rs  mod.rs  plot.py
sim/src/utils/plot/: plot.py
sim/src/utils/tables/: cubic_interpolation.rs  deserialization.rs  linear_interpolation.rs  mod.rs
sim/src/vehicle/: mod.rs  steering.rs
sim/tests/: circular_orbit.rs  powered_flight.rs  separate_phases.rs
src/: coordinate_systems.rs  main.rs
src/sim/: mod.rs  planet.rs  utils.rs  vehicle.rs
src/sim/atmosphere/: mod.rs  standard_atmosphere_1962.rs
src/sim/integration/: mod.rs  runge_kutta.rs
tables/: Cargo.toml
tables/src/: cubic_interpolation.rs  lib.rs  linear_interpolation.rs
tables/tests/: ss_example.rs
test_utils/src/: lib.rs
utils/: example.json
utils/plot/: requirements.txt
utils/src/: constants.rs  lib.rs  macros.rs
utils/src/tables/: cubic_interpolation.rs  linear_interpolation.rs  mod.rs
