[package]
name = "post"
version = "0.1.0"
authors = ["Tibor Völcker <tiborvoelcker@hotmail.de>"]
edition = "2021"
description = "A program to optimize simulated trajectories."
repository = "https://github.com/TiborVoelcker/post"
license = "MIT"

[workspace]
members = ["sim"]

[dependencies]
sim  = { path = "sim" }
clap = { version = "4.5.4", features = ["derive"] } 
