[package]
name = "sim"
documentation = "https://tiborvoelcker.github.io/post/docs/sim/index.html"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dyn-clone = "1.0.17"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
lazy_static = "1.4.0"
